--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/airplanetickets
-spring.datasource.username=wp
+spring.datasource.username=postgres
 spring.datasource.password=wp123
 
 
