--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=wp
+spring.datasource.username=postgres
 spring.datasource.password=wp123
 
 #spring.jpa.hibernate.ddl-auto=create-drop
